hopefull fix to txt alignment

--- a/HW08/hw08.css
+++ b/HW08/hw08.css
@@ -65,12 +65,14 @@
     border: red thick outset;
 }    
 #column1 {
-    text-align: left 45%;
+    width: 45%;
+    float: left;
     color: green;
     
 }
 #column2 {
-    text-align: right 50%;
+    width: 50%;
+    float: right;
     color: blue;
     
 }
